--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "axios": "^0.19.0",
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "1.5.3",
     "react-native-safe-area-context": "^0.6.2",
+    "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^2.0.4"
   },
